# signal-protocol

./: Cargo.toml  MANIFEST.in  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  python-tests.yml
signal_protocol/: __init__.py
src/: address.rs  curve.rs  error.rs  fingerprint.rs  group_cipher.rs  identity_key.rs  lib.rs  protocol.rs  ratchet.rs  sealed_sender.rs  sender_keys.rs  session.rs  session_cipher.rs  state.rs  storage.rs
src/signal_protocol/: __init__.py  _signal_protocol.pyi  address.pyi  curve.pyi  error.pyi  fingerprint.pyi  group_cipher.pyi  identity_key.pyi  protocol.pyi  ratchet.pyi  sealed_sender.pyi  sender_keys.pyi  session.pyi  session_cipher.pyi  state.pyi  storage.pyi
tests/: conftest.py  test_contains_session.py  test_group_cipher_persistent.py  test_ratchet.py  test_sealed_sender.py  test_sealed_sender_persistent.py  test_session.py  test_session_cipher_persistent.py  test_storage_proxy.py  test_storage_subclassing.py
